MC Cameri
	* Bank NPC - Now 100% done for new payon
	* Warper NPC - 100%, fixed memory consumption problem
	* Heal NPC - 100%
DracoRPG
	* New Novice Training Grounds - In progress with Riotblade's help
	* Towns Message Boards - Recruited Riotblade to work on them ^^

Other Ppl	
	* Their Work?

TODO:
	* Redo all NPC to work with BABY CLASS

== Changelog ==

Date		Added
======

04/25
	* Fixed typos in novice and thief job quests, thanks to zlider
04/23
	* Fixed 2 scripts which used old job_baby constant [Lupus]
	* Removed old duplicate job change in Alchemist job quest, thanks to NeoSaro [DracoRPG]
	* Added Hatii Baby spawn [Lupus]
04/21
	* Fixed THQ penalty again, added anti-cheat stuff [Lupus]
	* changed item_avail.txt to support THQ [Lupus]
	* Added Baby Class Support to Vallhallana. [Lupus]
	* Added a missing check. Now Baby Classes can get 1st job [Lupus]
	* Fixed few things in THQ Quest NPCs [Lupus]
04/20
	* Converted Treasure Hunters Guild (40 New Quests + Guild Shop) [Fredzilla]
	* Added time penalty to THQ. To prevent exploits. [Lupus]
	* Fixed Super Novice Job Quest (thanks to guy from eA forums .... <-- his name will be here)
	* Removed one warp from Swordsman Assiciation (due to overlapping Job Quest Warp) [Lupus]
	* Adding more NPC's to Louyang [celest]
	* Updated Louyang city script, thanks to Dino9021
	* Fixed Crusader Job quest (again). And several typos [Lupus]
	* Fixed a typo in the custom jobchanger, thanks to manutdcom
04/19
	* Added custom jobchanger fix by Zoc
	* Added custom Adoption script by Fredzilla [Lupus]
	* Removed annoying Kafra Storage issue [Lupus]
	* Fixed some Job Quests bugs (wrong constants, wrong variable names, etc) [Lupus]
	* Redo tons of NPC - added Baby Class support to all renters, job questsm etc [Lupus]
	* Added skillpoint check to Rogue job quest, thanks to Dino9021
04/17
	* Changed the assassin job quest npc to do an area announce instead of global,
	  thanks to NeoSaro