@@ -568,14 +568,17 @@ raisemap: 80
 // Revives all players on the server.
 raise: 80
 
-// Enables a NPC.
-enablenpc: 80
-
-// Disables a NPC.
-disablenpc: 80
-
 // Hides a NPC.
 hidenpc: 80
+
+// Unhides a NPC.
+shownpc: 80
+
+// Loads a Script
+loadnpc: 80
+
+// Unloads a NPC
+unloadnpc: 80
 
 // Move a NPC
 npcmove: 80
