@@ -272,6 +272,8 @@
 258: Sent packet 0x%x (%d)
 259: Invalid packet
 260: This item cannot be traded.
+261: Script could not be loaded.
+262: Script loaded.
 
 // Messages of others (not for GM commands)
 // ----------------------------------------
